# twitch-points-miner

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  app.dockerfile  example.config.yaml  mock.dockerfile
.github/workflows/: frontend.yml  image.yml  rust.yml
app/: Cargo.toml  diesel.toml
app/migrations/2024-04-01-111509_create_streamers/: down.sql
app/migrations/2024-04-01-111659_create_points/: down.sql  up.sql
app/migrations/2024-05-11-205032_index_points_info/: down.sql  up.sql
app/src/: default_config.rs  live.rs  main.rs  pubsub.rs
app/src/analytics/: mod.rs  model.rs  schema.rs
app/src/web_api/: analytics.rs  config.rs  mod.rs  predictions.rs  streamer.rs
common/: Cargo.toml
common/src/: lib.rs  types.rs
common/src/config/: filters.rs  mod.rs
common/src/twitch/: api.rs  auth.rs  gql.rs  mod.rs  ws.rs
frontend/: bun.lockb  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  Config.svelte  Logs.svelte  Points.svelte  Predictions.svelte  Setup.svelte  WatchPriority.svelte  api.d.ts  app.pcss  common.ts
frontend/src/lib/components/ui/: Config.svelte  ErrorAlert.svelte  SortableList.svelte  WatchPriority.svelte
frontend/src/lib/components/ui/table/: index.ts  table-checkbox.svelte
frontend/src/routes/: Logs.svelte  Points.svelte  Predictions.svelte  Setup.svelte
frontend/src/strategy/: DetailedStrategy.svelte  strategy.ts
migrations/2024-04-01-111509_create_streamers/: up.sql
migrations/2024-04-06-102702_create_predictions/: down.sql  up.sql
mock/: Cargo.toml
mock/src/: main.rs
src/: api.rs  auth.rs  common.rs  config.rs  default_config.rs  live.rs  main.rs  mock.rs  pubsub.rs  types.rs  web_api.rs
src/analytics/: mod.rs  model.rs  schema.rs
src/config/: filters.rs  mod.rs  strategy.rs
src/twitch/: api.rs  auth.rs  gql.rs  mod.rs  ws.rs
src/web_api/: analytics.rs  config.rs  mod.rs  predictions.rs  streamer.rs
