[package]
name = "twitch-points-miner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.11.0"
reqwest = { version = "0.11.2", features = ["cookies", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
http = "1.1.0"
twitch_api = { features = ["reqwest", "client", "helix", "pubsub", "unsupported", "typed-builder"], git = "https://github.com/t348575/twitch_api", branch = "hidden_pubsubs" }
flume = "0.11"
futures = "0.3"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
toml = "0.8"
rand = "0.8"
chrono = "0.4"
