[package]
name = "twitch-points-miner"
version = "0.1.9"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
indexmap = { version = "2.2", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
twitch_api = { features = ["pubsub", "unsupported", "utoipa"], git = "https://github.com/t348575/twitch_api", branch = "hidden_pubsubs" }
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
rand = "0.8"
validator = { version = "0.17", features = ["derive"], git = "https://github.com/Keats/validator", rev = "1dd03ed" }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.7", features = ["macros"] }
libsqlite3-sys = { version = "0.28", features = ["bundled"] }
diesel = { version = "2", features = ["sqlite", "chrono"] }
diesel_migrations = { version = "2", features = ["sqlite"] }
thiserror = "1"
utoipa = { version = "4", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }
tower-http = { version = "0.5", features = ["trace", "cors", "fs"] }
tracing-appender = "0.2"
flume = "0.11"
common = { path = "../common", features = ["web_api"] }
http = "1.1.0"
ansi-to-html = "0.2"

[features]
testing = ["common/testing"]

[dev-dependencies]
twitch_api = { features = ["pubsub", "unsupported", "time"], git = "https://github.com/t348575/twitch_api", branch = "hidden_pubsubs" }
testcontainers = "0.15"
ctor = "0.2"
rstest = "0.19"
env_logger = "0.11"
reqwest = "0.12"

[[bin]]
name = "twitch-points-miner"
path = "src/main.rs"

# [[bin]]
# name = "default-config"
# path = "src/default_config.rs"
