[package]
name = "common"
version = "0.1.8"
edition = "2021"

[lib]
doctest = false

[dependencies]
validator = { version = "0.17", features = ["derive"], git = "https://github.com/Keats/validator", rev = "1dd03ed" }
twitch_api = { features = ["pubsub", "unsupported"], git = "https://github.com/t348575/twitch_api", branch = "hidden_pubsubs" }
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
indexmap = { version = "2.2", features = ["serde"] }
color-eyre = "0.6"
utoipa = { version = "4", features = ["chrono"], optional = true }
base64 = "0.22"
flume = "0.11"
futures = "0.3"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
strum_macros = "0.26"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
tracing = "0.1"
dialoguer = "0.11"
http = "1.1.0"

[features]
web_api = ["dep:utoipa", "twitch_api/utoipa"]
testing = []