[package]
name = "common"
version = "0.1.11"
edition = "2021"

[lib]
doctest = false

[dependencies]
validator = { version = "0.17", features = ["derive"], git = "https://github.com/Keats/validator", rev = "1dd03ed" }
twitch_api = { features = ["tpm"], default-features = false, git = "https://github.com/t348575/twitch_api", branch = "hidden_pubsubs" }
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
indexmap = { version = "2.2", features = ["serde"] }
eyre = "0.6"
utoipa = { version = "4", features = ["chrono"], optional = true }
base64 = { version = "0.22", default-features = false }
flume = "0.11"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
strum_macros = "0.26"
rand = "0.8"
tracing = { version = "0.1", default-features = false }
dialoguer = "0.11"
testcontainers = { version = "0.16", optional = true }
ctor = { version = "0.2", optional = true }
rstest = { version = "0.19", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"], optional = true }
futures-util = { version = "0.3", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[features]
web_api = ["dep:utoipa", "twitch_api/utoipa"]
testing = ["dep:testcontainers", "dep:ctor", "dep:rstest", "dep:tracing-subscriber"]
