[package]
name = "mock"
version = "0.1.8"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "ws"] }
color-eyre = "0.6"
common = { path = "../common" }
http = "1.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
twitch_api = { features = ["pubsub", "unsupported"], git = "https://github.com/t348575/twitch_api", branch = "hidden_pubsubs" }
